[gd_scene load_steps=9 format=4 uid="uid://dnc48jro3asqu"]

[ext_resource type="Script" path="res://scenes/cup.gd" id="1_2f5ew"]
[ext_resource type="PackedScene" uid="uid://c30xeocvlomln" path="res://scenes/die.tscn" id="3_qt4yw"]
[ext_resource type="Script" path="res://scenes/zoom_in_region.gd" id="3_rtvq6"]
[ext_resource type="AudioStream" uid="uid://llfm86cpw8p0" path="res://sounds/cup_woosh.wav" id="5_b5hc4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_07hkj"]
resource_name = "M_Wuerfeln"
transparency = 1
cull_mode = 2
albedo_color = Color(0.237539, 0.237539, 0.237539, 1)
metallic_texture_channel = 2
roughness_texture_channel = 1
normal_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_3anir"]
_surfaces = [{
"aabb": AABB(-100, -135.177, -100, 200, 235.177, 200),
"format": 34896613377,
"index_count": 480,
"index_data": PackedByteArray("AwABAAAAAQADAAIAAgAEAAEABAACAAUABQAGAAQABgAFAAcABwAIAAYACAAHAAkACQAKAAgACgAJAAsACwAMAAoADAALAA0ADQAOAAwADgANAA8ADwAQAA4AEAAPABEAEQASABAAEgARABMAEwAUABIAFAATABUAFQAWABQAFgAVABcAFwAYABYAGAAXABkAGQAaABgAGgAZABsAGwAcABoAHAAbAB0AHQAeABwAHgAdAB8AHwAgAB4AIAAfACEAIQAiACAAIgAhACMAIwAkACIAJAAjACUAJQAmACQAJgAlACcAJwAAACYAAAAnAAMAAQAoAAAABAAoAAEABgAoAAQACAAoAAYACgAoAAgADAAoAAoADgAoAAwAEAAoAA4AEgAoABAAFAAoABIAFgAoABQAGAAoABYAGgAoABgAHAAoABoAHgAoABwAIAAoAB4AIgAoACAAJAAoACIAJgAoACQAAAAoACYAKgACAAMAAgAqACkAKQAFAAIABQApACsAKwAHAAUABwArACwALAAJAAcACQAsAC0ALQALAAkACwAtAC4ALgANAAsADQAuAC8ALwAPAA0ADwAvADAAMAARAA8AEQAwADEAMQATABEAEwAxADIAMgAVABMAFQAyADMAMwAXABUAFwAzADQANAAZABcAGQA0ADUANQAbABkAGwA1ADYANgAdABsAHQA2ADcANwAfAB0AHwA3ADgAOAAhAB8AIQA4ADkAOQAjACEAIwA5ADoAOgAlACMAJQA6ADsAOwAnACUAJwA7ADwAPAADACcAAwA8ACoAPgApACoAKQA+AD0APQArACkAKwA9AD8APwAsACsALAA/AEAAQAAtACwALQBAAEEAQQAuAC0ALgBBAEIAQgAvAC4ALwBCAEMAQwAwAC8AMABDAEQARAAxADAAMQBEAEUARQAyADEAMgBFAEYARgAzADIAMwBGAEcARwA0ADMANABHAEgASAA1ADQANQBIAEkASQA2ADUANgBJAEoASgA3ADYANwBKAEsASwA4ADcAOABLAEwATAA5ADgAOQBMAE0ATQA6ADkAOgBNAE4ATgA7ADoAOwBOAE8ATwA8ADsAPABPAFAAUAAqADwAKgBQAD4ASQBIAFEAPQBRAD8AUQBAAD8AUQBBAEAAUQBCAEEAUQBDAEIAUQBEAEMAUQBFAEQAUQBGAEUAUQBHAEYAUQBIAEcASgBJAFEASwBKAFEATABLAFEATQBMAFEATgBNAFEATwBOAFEAUABPAFEAPgBQAFEAPQA+AFEA"),
"lods": [33.3531, PackedByteArray("AgAKAAAACgACAAkAAAAnAAIACgAJAA0AJwAAACIAIgAhACcAIQAiACAADQASAAoAEgANABEAEgARABcAFwAaABIAGgAXAB0AHQAgABoAIAAdACEAEgAAAAoAGgAAABIAIAAAABoAIgAAACAAAgA8ACwAPAACACcALAAJAAIAJwA4ADwALAANAAkAOAAnACEADQAsADAAOAAhAB0AMAARAA0AHQA1ADgAMAAXABEANQAdABcAFwAwADUAPQAsADwALAA9AEAAPABNAD0AQAAwACwATQA8ADgAMABAAEQAOABLAE0AOABJAEsASQA4ADUAMABEAEgASAA1ADAANQBIAEkAPQBJAEAASQBEAEAASQBIAEQAPQBNAEkATQBLAEkA"), 37.4247, PackedByteArray("AgAIAAAAAAAnAAIACAACAAUACAAFAAcACAAHAAkACAAJAAsAJwAAACIAIgAlACcAIgAjACUAIgAhACMAIQAiACAACwAQAAgAEAALAA0AEAANAA8AEAAPABEAEAARABMAEwAYABAAGAATABUAGAAVABcAGAAXABkAGAAZABsAGwAcABgAHAAbAB0AHAAdAB8AHwAgABwAIAAfACEAEAAAAAgAGAAAABAAHAAAABgAIAAAABwAIgAAACAALAAFAAIALAAHAAUALAAJAAcALAALAAkAAgA8ACwAPAACACcAJwA6ADwAOgAnACUAOgAlACMACwAsADAAIwA4ADoAMAANAAsAMAAPAA0AMAARAA8AMAATABEAOAAjACEAOAAhAB8AOAAfAB0AOAAdABsAGwA1ADgANQAbABkAEwAwADIAGQAyADUAMgAVABMAMgAZABcAMgAXABUALAA9AEAALABAAEEAPQAsADwAPABPAD0ATwA8ADoAOgBOAE8AOgBNAE4AQQAwACwATQA6ADgAMABBAEIAMABCAEMAMABDAEQAMABEAEUAOABMAE0AOABLAEwAOABKAEsAOABJAEoASQA4ADUARQAyADAAMgBFAEYAMgBGAEcAMgBHAEgASAA1ADIANQBIAEkAPQBJAEAASQBBAEAAPQBPAEkASQBCAEEATwBOAEkASQBDAEIATgBNAEkASQBEAEMATQBMAEkASQBFAEQATABLAEkASwBKAEkASQBGAEUASQBHAEYASQBIAEcA"), 98.4499, PackedByteArray("CgAnAA8ACgAhACcAIQAKACAACgAPABcACgAXABsAGwAgAAoAIAAbACEAJwA4ADAAOAAnACEAMAAPACcAOAAhABsAMAAXAA8AGwA1ADgAFwAwADQAGwA0ADUANAAbABcAQAAwADgAQAA0ADAAQAA1ADQANQBAAEkAOABMAEAAOABJAEwASQA4ADUAQABMAEkA")],
"name": "M_Wuerfeln",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 82,
"vertex_data": PackedByteArray("xdcAAHpjAACpygAAwEkAAIzn///DNAAAu/n//3FYAAA+tgAAVTUAADvL//9yGAAAhJwAADkoAACNp///QwYAAP9/AAC1IwAA/3///wAAAAB6YwAAOSgAAHFY//9DBgAAwEkAAFU1AADDNP//chgAAFU1AADASQAAchj//8M0AAA5KAAAemMAAEMG//9xWAAAtSMAAP9/AAAAAP///38AADkoAACEnAAAQwb//42nAABVNQAAPrYAAHIY//87ywAAwEkAAKnKAADDNP//jOcAAHpjAADF1wAAcVj//7v5AAD/fwAASdwAAP9//////wAAhJwAAMXXAACNp///u/kAAD62AACpygAAO8v//4znAACpygAAPrYAAIzn//87ywAAxdcAAIScAAC7+f//jacAAEncAAD/fwAA//////9/AAD/fwAA/38AABjd//9bPAAAcO3//3BcAACjw///5iIAAI6j//+OEgAA/3///+wMAABwXP//jhIAAFs8///mIgAA5iL//1s8AACOEv//cFwAAOwM////fwAAjhL//46jAADmIv//o8MAAFs8//8Y3QAAcFz//3DtAAD/f///EvMAAI6j//9w7QAAo8P//xjdAAAY3f//o8MAAHDt//+OowAAEvP///9/AAAfw50IOk8AAOjOnQhbZgAAxLCdCN88AACjmZ0IFjEAAP9/nQgGLQAAW2adCBYxAAA6T50I3zwAAN88nQg6TwAAFjGdCFtmAAAGLZ0I/38AABYxnQijmQAA3zydCMSwAAA6T50IH8MAAFtmnQjozgAA/3+dCPjSAACjmZ0I6M4AAMSwnQgfwwAAH8OdCMSwAADozp0Io5kAAPjSnQj/fwAA/3+dCP9/AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_hkkh8"]
resource_name = "cup_new_defaultMaterial_001"
_surfaces = [{
"aabb": AABB(-100, -135.177, -100, 200, 235.177, 200),
"attribute_data": PackedByteArray("FZ+mRpOjj0fimud2p5SkdRmoTkgooe93paziSHenvHg3sUpJza1Oecu1iEkmtKN5YLqbSYK6vXn2voJJ3sCaeYrDPkk3xzx5GsjOSIvNonimzDRI2dPMdyvRb0ce2rt2qNWARlfgb3Ub2mZFhOboc4TeI0Sh7Cdy3+K2QqzyLnAt5yBBpPj7bYiNX0HYke9CS4J8cFB8Um42llVEWYhucqCak0V4jiZ0SXV7foV3xoKPaIeHznETe2tt5HiPaCN4smPkeE9fE3vUW3t+mFnGgtNYh4eYWUmM1FuTkE9f+5OyYyuWj2jslmttK5bOcfuTSXWTkIV3SYxLeIeHBn2Mju15gJQkeDuT7nrijRl1OZnNc3uXA29BnFVuNJpFaE2dRWglm1VuNJqHYUGcNWI0mnFbOZm9XHuXnVaAlGZYO5OEU4yOnFXijXNS9IenVPSHhFNbgZxVBYKdVmd7ZlisfHFbrna9XG14h2GmczVis3VFaJpyRWjCdANvpnNVbrN1GXWuds1zbXjteWd7JHisfAZ9W4HuegWCF370h+N79Ie8ysZBBcUSQmbDmxOEx2QTTb8sQka/rhOVuRRCJ7udE9+zyUEIt2cTLK5NQe2yDRN/qJ5A1K6PEtiivj/Bqu4ROZ2sPrSmKBGll2k9rqI/EB2S9TuxnjMPooxROr6aBA43h3041payDGH3azj28UE6zeP5DbXnpgx87Oc72t8pD/TmXT3d2zYQYeGhPtjXIBHD27U/y9PnERzWl0C4z4oSbtBIQaDLCRNeCCl3rxBbgj0FOXohHH6KABmOjQ4VhY+vEDKQUAyFj14Ijo09BX6KOwOihooCW4I7AxV+UAwyda8QhXQOFTJ1ABkpdyEcOXojHhV+1B5bgiMeoobLtYhJhOboc+Ka53bLtYhJGsjOSBrIzkg="),
"format": 34896613399,
"index_count": 480,
"index_data": PackedByteArray("AwABAAAAAQADAAIAAgAEAAEABAACAAUABQAGAAQABgAFAAcABwAIAAYACAAHAAkACQAKAAgACgAJAAsACwAMAAoADAALAA0ADQAOAAwADgANAA8ADwAQAA4AEAAPABEAEQASABAAEgARABMAEwAUABIAFAATABUAFQAWABQAFgAVABcAFwAYABYAGAAXABkAGQAaABgAGgAZABsAGwAcABoAHAAbAB0AHQAeABwAHgAdAB8AHwAgAB4AIAAfACEAJQAjACIAIwAlACQAJAAmACMAJgAkACcAJwAoACYAKAAnACkAKQAAACgAAAApAAMAKgAsACsALQAsACoALgAsAC0ALwAsAC4AMAAsAC8AMQAsADAAMgAsADEAMwAsADIANAAsADMANQAsADQANgAsADUANwAsADYAOAAsADcAOQAsADgAOgAsADkAOwAsADoAPAAsADsAPQAsADwAPgAsAD0AKwAsAD4AQgBAAD8AQABCAEEAQQBDAEAAQwBBAEQARABFAEMARQBEAEYASQBHAEUARwBJAEgASABKAEcASgBIAEsASwBMAEoATABLAE0ATQBOAEwATgBNAE8ATwBQAE4AUABPAFEAUQBSAFAAUgBRAFMAUwBUAFIAVABTAFUAVQBWAFQAVgBVAFcAVwBYAFYAWABXAFkAWQBaAFgAWgBZAFsAWwBcAFoAXABbAF0AXQBeAFwAXgBdAF8AXwBgAF4AYABfAGEAYQBiAGAAYgBhAGMAYwBkAGIAZABjAGUAZQBmAGQAZgBlAGcAZwA/AGYAPwBnAEIAawBpAGgAaQBrAGoAagBsAGkAbABqAG0AbQBuAGwAbgBtAG8AbwBwAG4AcABvAHEAcQByAHAAcgBxAHMAcwB0AHIAdABzAHUAdQB2AHQAdgB1AHcAdwB4AHYAeAB3AHkAeQB6AHgAegB5AHsAewB8AHoAfAB7AH0AfQB+AHwAfgB9AH8AfwCAAH4AgAB/AIEAhQCDAIIAgwCFAIQAhACGAIMAhgCEAIcAhwCIAIYAiACHAIkAiQCKAIgAigCJAIsAiwCMAIoAjACLAI0AjQCOAIwAjgCNAI8AjwCQAI4AkACPAJEAkQBoAJAAaACRAGsAkgCUAJMAlQCTAJYAkwCXAJYAkwCYAJcAkwCZAJgAkwCaAJkAkwCbAJoAkwCcAJsAkwCdAJwAkwCeAJ0AkwCUAJ4AnwCSAJMAoACfAJMAoQCgAJMAogChAJMAowCiAJMApACjAJMApQCkAJMApgClAJMAlQCmAJMA"),
"lods": [33.3531, PackedByteArray("qQCqAAAAqgCpAAkAAAApAKkAqgAJAA0AKQAAACMAIwAlACkAJQAjACIADQCrAKoAqwANABEAqwARABcAFwAaAKwAGgAXAB0AHQAgABoAIAAdACEANAArADAAOAArADQAOwArADgAPAArADsAQABnAEYAZwBAAGYARgBHAEAAZgBfAGcARgBMAEcAXwBmAGAATABGAE8AXwBgAFwATwBQAEwAXABZAF8ATwBWAFAAWQBcAFYAVgBPAFkAagBuAJAAbgBqAG8AkACLAGoAbwB2AG4AiwCQAIgAdgBvAHcAiACHAIsAiACFAIcAhQCIAIIAdgB3AH8AfwCAAHYAgAB/AIEAlQCSAJcAkgCbAJcAkgCUAJsAlQCiAJIAogCgAJIA"), 37.4247, PackedByteArray("AgAIAAAAAAApAAIACAACAAUACAAFAAcACAAHAAkACAAJAAsAKQAAACMAIwAnACkAIwAkACcAIwAlACQAJQAjACIACwAQAAgAEAALAA0AEAANAA8AEAAPABEAEAARABMAEwAYABAAGAATABUAGAAVABcAGAAXABkAGAAZABsAGwAcABgAHAAbAB0AHAAdAB8AHwAgABwAIAAfACEAMwArAC8ANwArADMAOQArADcAOwArADkAPAArADsARgBDAEAARgBFAEMARgBHAEUARgBKAEcAQABnAEYAZwBAAGYAZgBjAGcAYwBmAGQAYwBkAGIASgBGAE8AYgBfAGMATwBMAEoATwBOAEwATwBQAE4ATwBSAFAAXwBiAGAAXwBgAF4AXwBeAFwAXwBcAFoAWgBZAF8AWQBaAFgAUgBPAFMAWABTAFkAUwBUAFIAUwBYAFYAUwBWAFQAbgBqAG8AbgBvAHEAagBuAJAAkACPAGoAjwCQAIwAjACNAI8AjACLAI0AcQB2AG4AiwCMAIgAdgBxAHMAdgBzAHUAdgB1AHcAdgB3AHkAiACJAIsAiACHAIkAiACEAIcAiACFAIQAhQCIAIIAeQB6AHYAegB5AHsAegB7AH0AegB9AH8AfwCAAHoAgAB/AIEAlQCSAJcAkgCYAJcAlQCkAJIAkgCZAJgApACjAJIAkgCaAJkAowCiAJIAkgCbAJoAogChAJIAkgCcAJsAoQCgAJIAoACfAJIAkgCdAJwAkgCeAJ0AkgCUAJ4A"), 98.4499, PackedByteArray("CgApAA8ACgAlACkAJQAKACIApwAPABcACgAXABsAGwAgAAoAIACoACEAZgBfAE8AXwBmAGAATwBOAGYAXwBgAFoATwBWAE4AWgBZAF8AVgBPAFcAWgBXAFkAVwBaAFYAbwB2AIgAbwB+AHYAbwCAAH4AgABvAIEAiACJAG8AiACFAIkAhQCIAIIAlwChAJIA")],
"material": SubResource("StandardMaterial3D_07hkj"),
"name": "M_Wuerfeln",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 173,
"vertex_data": PackedByteArray("xdcAAHpjNTKpygAAwEm2JYzn///DNLYlu/n//3FYNTI+tgAAVTUhGTvL//9yGCEZhJwAADkofwyNp///QwZ/DP9/AAC1IywA/3///wAALAB6YwAAOSjcDHFY//9DBtwMwEkAAFU1ixnDNP//chiLGVU1AADASTgmchj//8M0OSY5KAAAemPdMkMG//9xWN0ytSMAAP9/cz8AAP///39zPzkoAACEnOxLQwb//42n7EtVNQAAPrYsWHIY//87yyxYwEkAAKnK7WPDNP//jOftY3pjAADF1y1ucVj//7v5LW7/fwAASdzUcv9//////9RyhJwAAMXXLW2Np///u/ktbT62AACpyrdiO8v//4znt2I+tgAAqcpLYanKAAA+tnBWjOf//zvLcFY7y///jOdLYcXXAACEnLZKu/n//42ntkpJ3AAA/3+SPv//////f5I+qcoAAMBJ/z/F1wAAemP/P/9/AAD/f/8/PrYAAFU1/z+EnAAAOSj/P/9/AAC1I/8/emMAADko/z/ASQAAVTX/P1U1AADASf8/OSgAAHpj/z+1IwAA/3//PzkoAACEnP8/VTUAAD62/z/ASQAAqcr/P3pjAADF1/8//38AAEnc/z+EnAAAxdf/Pz62AACpyv8/qcoAAD62/z/F1wAAhJz/P0ncAAD/f/8/u/n//3FY/z+M5///wzT/Pxjd//9bPP8/cO3//3Bc/z87y///chj/P6PD///mIv8/jaf//0MG/z+Oo///jhL/P/9///8AAP8//3///+wM/z+Oo///jhL/P3FY//9DBv8/cFz//44S/z/DNP//chj/P1s8///mIv8/chj//8M0/z/mIv//Wzz/P0MG//9xWP8/jhL//3Bc/z8AAP///3//P+wM////f/8/Qwb//42n/z+OEv//jqP/P3IY//87y/8/5iL//6PD/z/DNP//jOf/P1s8//8Y3f8/cVj//7v5/z9wXP//cO3/P/9///////8//3///xLz/z+Np///u/n/P46j//9w7f8/O8v//4zn/z+jw///GN3/P4zn//87y/8/GN3//6PD/z+7+f//jaf/P3Dt//+Oo/8///////9//z8S8////3//P3Dt//9wXLhMGN3//1s8aVkfw50IOk9pWejOnQhbZrhMo8P//+YiBmbEsJ0I3zwGZo6j//+OEkxyo5mdCBYxTHL/f///7Ay2ev9/nQgGLbZ6cFz//44SBHJbZp0IFjEEcls8///mIr1lOk+dCN88vWXmIv//WzwmWd88nQg6TyZZjhL//3BcfkwWMZ0IW2Z+TOwM////f9E/Bi2dCP9/0T+OEv//jqMoMxYxnQijmSgz5iL//6PDhybfPJ0IxLCHJls8//8Y3e8ZOk+dCB/D7xlbPP//GN1jGHBc//9w7e0LW2adCOjO7Qs6T50IH8NjGP9///8S858A/3+dCPjSngCOo///cO07DaOZnQjozjsNo8P//xjd4RnEsJ0IH8PhGRjd//+jw5EmH8OdCMSwkSZw7f//jqNGM+jOnQijmUYzEvP///9//z/40p0I/3//PzpPnQgfw/8//3+dCP9//z/fPJ0IxLD/Px/DnQg6T/8/xLCdCN88/z+jmZ0IFjH/P/9/nQgGLf8/W2adCBYx/z86T50I3zz/P988nQg6T/8/FjGdCFtm/z8GLZ0I/3//PxYxnQijmf8/W2adCOjO/z//f50I+NL/P6OZnQjozv8/xLCdCB/D/z8fw50IxLD/P+jOnQijmf8/+NKdCP9//z/ozp0IW2b/P3pjAAA5KNMWcVj//7v5G26M5///wzTPIXpjAAA5KMoJtSMAAP9/1jm1IwAA/3+WSS2H7RXGhl8Sx4ZfEi2H7RUWhmoPFoZpDzOF/gwzhf4M43TL++N0y/svdtj8L3bY/M524f3OduH9lnbN/pZ2zf5JdX//SXV//4Fyzf+Bcs3/lG1t/5Rtbf9MZeL9TGXi/TVXLPo1Vyz6bz3r8W896/E4BZDdOAWQ3fQv2xv0L9sbVUKNGVVCjRllgPEwjISfJoyEnyZlgPEwbYaTH22Gkx8khzsaJIc6GgAA/38AAP9/AAD/fwAAAIAAAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/fwAA/38AAP9/AAD/f/7//3/+//9//v//f/7//3/9//1//f/9f/7//3/+//9//v//f/7//3/+//9//v//f/7//3/9/wCA/f8AgP7//3/+//9//v//f/7//3/+//9//v//f/7//3/+//9//v//f/7//3/+//9//v//f/7//3/+//9/////f/7//3/+//5//v//f/7//3/+//9//v//f/7//3/+//9//v//f/7//3/+//9/t4yA8g6Oqe8Ojqrvt4yA8r6RmOi9kZfoMpzm1TKc5dUUzaeCE82nguWe+jPlnvszDJasJAyWqyQpk4EeKZOBHkaSQhtGkkMbTJI3GUySNhnSkq8X0pKvF6iTUhaok1IWt5TrFLeU6xTdZN0PKWiDDypogg/dZNwPAI8Z6wCPGetmjq7tZo6u7cKN4+/CjePvJY2m8SWNpvGnjNryp4za8myMRvNsjEbz/v//f/7//3/+//9//v//f/7//3/+//9/////f/7//3/+//9//v//f/7//3////9//v//f/7//3/+//9//v//f/7//3/+//9//v//f////3/+//9/O3l2/TMRj9p/hQwRanKY/d5yUv+/bJL/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_3anir")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0mtvu"]
height = 0.14767
radius = 0.104197

[node name="Cup" type="Node3D" groups=["Cups"]]
script = ExtResource("1_2f5ew")

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(0.591324, 0, 0.806434, 0, 0.7, 0, -0.806434, 0, 0.591324, 0, 0, 0)

[node name="Model" type="Node3D" parent="Body"]
transform = Transform3D(0.021879, 2.60853e-09, 0.0298381, 0, -0.0528571, 4.62092e-09, 0.0298381, -1.91272e-09, -0.021879, 0, -0.0150431, 0)

[node name="defaultMaterial_001" type="MeshInstance3D" parent="Body/Model"]
transform = Transform3D(0.02, 6.61744e-24, -7.88861e-31, 0, 0.02, 2.22045e-16, 0, -2.22045e-16, 0.02, 0, 0, 0)
mesh = SubResource("ArrayMesh_hkkh8")
skeleton = NodePath("")

[node name="Dice" type="Node3D" parent="."]
transform = Transform3D(0.208246, 0, -0.978077, 0, 1, 0, 0.978077, 0, 0.208246, 0, -0.0639447, 0)

[node name="Die" parent="Dice" instance=ExtResource("3_qt4yw")]
transform = Transform3D(0.872069, 8.55666e-08, 0.489382, 0, 1, -1.74846e-07, -0.489382, 1.52478e-07, 0.872069, 0, 0, 0.0428023)
face = 4

[node name="Die2" parent="Dice" instance=ExtResource("3_qt4yw")]
transform = Transform3D(0.987669, -2.7373e-08, -0.156555, 0, 1, -1.74846e-07, 0.156555, 1.7269e-07, 0.987669, 0.0335828, 0, 0.016266)
face = 3

[node name="Die3" parent="Dice" instance=ExtResource("3_qt4yw")]
transform = Transform3D(0.867766, -8.68939e-08, -0.496974, 0, 1, -1.74846e-07, 0.496974, 1.51725e-07, 0.867765, 0, 0, 0)
face = 5

[node name="Die4" parent="Dice" instance=ExtResource("3_qt4yw")]
transform = Transform3D(-0.163754, -1.72486e-07, -0.986501, 0, 1, -1.74846e-07, 0.986501, -2.86318e-08, -0.163754, 0, 0, -0.0392922)
face = 4

[node name="Die5" parent="Dice" instance=ExtResource("3_qt4yw")]
transform = Transform3D(0.999938, 1.94385e-09, 0.0111175, 0, 1, -1.74846e-07, -0.0111175, 1.74835e-07, 0.999938, -0.0405214, 0, 0)
face = 4

[node name="ZoomInRegion" type="Area3D" parent="." node_paths=PackedStringArray("cup")]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("3_rtvq6")
cup = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZoomInRegion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00126197, 0)
shape = SubResource("CylinderShape3D_0mtvu")

[node name="Points" type="Node3D" parent="."]
transform = Transform3D(0.591324, 0, 0.806434, 0, 1, 0, -0.806434, 0, 0.591324, 0, 0, 0)

[node name="RestPoint" type="Marker3D" parent="Points"]

[node name="RaisePoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 0.981276, 0.192608, 0, -0.192608, 0.981276, 0, 0.123029, -0.0350585)

[node name="OriginPoint" type="Marker3D" parent="Points"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.161413)

[node name="Sounds" type="Node" parent="."]

[node name="Woosh" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_b5hc4")
volume_db = -9.0
pitch_scale = 0.9

[connection signal="area_entered" from="ZoomInRegion" to="ZoomInRegion" method="_on_area_entered"]
